# OpenPrivMark

./: BUILD.bazel  LICENCE  README.md  privmark.py  requirements.txt
appendix/: appendix.tex
experiments/: results.jsonl  resultsFP.jsonl  stats.py  watermark_examples.json
utils/: nodectl.py
without_spu/: watermarking_detection.py  watermarking_insertion.py
